<resources>

    <string name="app_name">Challenge</string>
    <string name="marvel_challenge">Marvel Challenge</string>

    <string name="no_connection">You are not connected to the internet</string>
    <string name="server_error">Error while connecting to the server</string>
    <string name="must_complete">You must complete all fields</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="wrong_credentials">The combination of Email and Password is not correct. Please retry.</string>

    <string name="characters">Characters</string>
    <string name="events">Events</string>

    <string name="comics_to_discuss">Comics to discuss</string>
    <string name="appears_in_these_comics">Appears in these comics</string>

</resources>