<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTopBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_margin3"
        android:background="@color/only_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marvel_challenge"
            android:textColor="@color/only_white"
            android:textSize="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/constraintBottomBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintTopBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintBottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_margin3"
        android:background="@color/white"
        android:elevation="@dimen/small_margin2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearCharacters"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/viewMiddle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_superhero_enabled"/>

            <TextView
                android:id="@+id/tvCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/characters"
                android:textColor="@color/light_black"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:id="@+id/viewMiddle"
            android:layout_width="@dimen/one_dp"
            android:layout_height="@dimen/one_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearEvents"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewMiddle"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_calendar_disabled"/>

            <TextView
                android:id="@+id/tvEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events"
                android:textSize="@dimen/small_margin3"
                android:fontFamily="@font/roboto"
                android:textColor="@color/dark_gray" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>